--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "vue": "^2.1.0"
   },
   "devDependencies": {
